# gecko

./: .gitignore  AGENT.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.agent/rules/: agent.md
.cursor/rules/: agent.mdc
.github/: copilot-instructions.md
crates/gecko_core/: Cargo.toml
crates/gecko_core/benches/: engine_benchmark.rs
crates/gecko_core/src/: config.rs  device.rs  engine.rs  error.rs  lib.rs  message.rs  settings.rs  stream.rs
crates/gecko_dsp/: Cargo.toml
crates/gecko_dsp/benches/: eq_benchmark.rs
crates/gecko_dsp/src/: eq.rs  error.rs  fft.rs  lib.rs  presets.rs  processor.rs  soft_clip.rs
crates/gecko_platform/: Cargo.toml
crates/gecko_platform/src/: error.rs  lib.rs  macos.rs  traits.rs  windows.rs
crates/gecko_platform/src/linux/: audio_stream.rs  filter.rs  message.rs  mod.rs  state.rs  thread.rs
crates/gecko_platform/src/macos/: audio_output.rs  coreaudio.rs  mod.rs  permissions.rs  process_tap.rs  process_tap_ffi.rs  tap_description.rs
crates/gecko_platform/src/windows/: com.rs  device.rs  message.rs  mod.rs  process.rs  session.rs  tests.rs  thread.rs  version.rs
docs/: 01_Architecture_Spec.md  02_Windows_Strategy.md  03_MacOS_Strategy.md  04_Linux_Strategy.md  05_DSP_and_Tech_Stack.md  VISION.md
docs/ai-commands/: README.md  TRIGGER-CHECKLIST.md  check-agent-drift.md  check-kb-index.md  check-test-coverage.md  cleanup-sessions.md  document-solution.md  list-commands.md  log-mistake.md  pre-commit-check.md  save-session.md  session-end-checklist.md
docs/ai-knowledge/: README.md
docs/ai-knowledge/ai-patterns/: mistake-log.md  trigger-log.md
docs/ai-knowledge/architecture/: audio-pipeline.md  platform-linux.md  platform-macos.md  platform-windows.md  realtime-rules.md
docs/ai-knowledge/features/: eq-implementation.md  frontend-patterns.md
docs/ai-knowledge/sessions/: 2024-12-07-feature-roadmap.md  2025-12-07_audio-routing-debug.md  2025-12-07_per-app-eq-implementation.md  2025-12-07_per-app-volume-and-persisted-eq.md  2025-12-07_pipewire-capture-port-fix.md  2025-12-08_firefox-youtube-scrub-bug.md  2025-12-08_phase4-polish-features.md  2025-12-08_stability-and-backend-persistence.md  2025-12-08_ui-polish-and-bugfixes.md  2025-12-09_pipewire-volume-sync.md  2025-12-30_windows-wasapi-fixes.md  2025-12-31_windows-wasapi-integration.md
scripts/: dev-macos.sh  entitlements.plist
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  Gecko.entitlements  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: AudioStreamItem.tsx  Controls.tsx  Equalizer.tsx  LevelMeter.tsx  MacOSLimitationNotice.tsx  PresetSelector.tsx  Settings.tsx  SpectrumAnalyzer.tsx  StreamList.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  editable-value.tsx  index.ts  select.tsx  slider.tsx  theme-dropdown.tsx
src/contexts/: SettingsContext.tsx
src/lib/: utils.ts
